@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed a startup crash when using certain very powerful fuels
+    - Fixed an issue where certain fuel categories would be duplicated internally
 
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
